--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
                     <li>
                         <a href="">
                             <i class="icon-user icon-white"></i>
-                            Inicio
+                            Alumnos
                         </a>
                     </li>
 
