--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,25 @@
     .tr-head {
         background: #dff0d8;
     }
+
+    .form-container {
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    .form-container-left {
+        float: left;
+        width: 45%;
+    }
+
+    .form-container-right {
+        float: right;
+        width: 45%;
+    }
+
+    .form-result {
+        margin-top: 20px;
+    }
 </style>
 <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.min.css">
 
@@ -53,6 +72,15 @@
 
     </div>
     <div class="container">
+        {%with messages = get_flashed_messages()%}
+        {%if messages%}
+          {%for message in messages%}
+          <div class="alert alert-success">
+            {{message}}
+          </div>
+          {%endfor%}
+        {%endif%}
+        {%endwith%}
         {%block content%}
         {%endblock%}
     </div>
