--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,10 @@
 <style>
     body {
         padding-top: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
 
     }
 
@@ -35,6 +39,19 @@
 
     .form-result {
         margin-top: 20px;
+    }
+
+    table {
+        border: 2px solid black;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    th,
+    td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;
     }
 </style>
 <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.min.css">
@@ -74,15 +91,18 @@
     <div class="container">
         {%with messages = get_flashed_messages()%}
         {%if messages%}
-          {%for message in messages%}
-          <div class="alert alert-success">
+        {%for message in messages%}
+        <div class="alert alert-success">
             {{message}}
-          </div>
-          {%endfor%}
+        </div>
+        {%endfor%}
         {%endif%}
         {%endwith%}
         {%block content%}
         {%endblock%}
+
+
+
     </div>
 
 </body>
